[issue-32] update z-index of form items

--- a/src/stories/components/Form/styles.scss
+++ b/src/stories/components/Form/styles.scss
@@ -15,6 +15,8 @@
 .form--login {
   > * {
     @include fade-in-up;
+    position: relative;
+    z-index: 2;
 
     @for $i from 1 through 10 {
       &:nth-child(#{$i}n) {
@@ -28,5 +30,5 @@
   bottom: 0;
   position: absolute;
   right: 0;
-  z-index: -1;
+  z-index: 1;
 }
